# PythonSetup

./: .gitignore  .gitmodules  README.md  my_unique_imports.py
AI/AzureML/: README.md  pyproject.toml
AI/DL/: PyTorchTutorials.txt
AI/ML/: 10-DS-libs.txt  ClassifyingConcord.txt  MLOps.txt  PoetryADtest.txt
AI/ML/hello-world-azureml/: README.md  TODO.md  debug_scoring.py  debug_scoring_tests.py  inspect_model_files.py  local_inference_server.py  pyproject.toml  service.config.yaml  viewer.py
AI/ML/hello-world-azureml/model/: model_info.json
AI/ML/hello-world-azureml/tests/: test_service_regressions.py
AI/NumPy/: OfficialDocs01.txt  OfficialDocs02.txt
Flask/JsonSchema/: Ex01.py  Ex02.py  README.md
Flask/MarshMallowSchema/: README.md  main.py  main_org.py
Flask/MarshMallowSchemaTest/: README.md  driver.py  file_controller.py  main.py  pyproject.toml  user.py  user.yaml  user_controller.py
Flask/Marshmallow/: 01-marshmallow.py  01b-marshmallow.py  02-readthedocs.py  README.md
Flask/PostgresDocker/: Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt  seed.py
Flask/Pydantic/: 01-pydantic.py  README.md  main01.py  main02.py  main03.py  main20.py  main21.py  main30.py  main40.py  main50.py  main51.py  pydantic_models02.py  pydantic_models03.py  pydantic_models04.py  pydantic_models05_validate_funcs.py  pydantic_models06_settings.py  pydantic_models07_SettingsDict.py
Flask/Pytest/: README.md  conftest.py  pytest.ini  result.xml  test_compare.py  test_div_by_13.py  test_div_by_3_6.py  test_failure.py  test_marker.py  test_multiplication.py  test_square.py  test_xfail_skip.py
Flask/SQLalchemy/: Ex01.py  Ex02a.py  Ex02b.py  Ex02c.py  Ex02d.py  Ex02e.py  Ex03.py  Ex03a.py  Ex03b.py  Ex03c.py  README.Md  README.md  README02.md  README03.md
Flask/re-flex-games-app/: .gitignore  README.md  app.py  config.py  models.py  requirements.txt  seed.py
HelloPackages/: README.md
HelloPyCharm/: HelloWorld.py
HelloVScode/: HelloWorld.py  plottest.py
HelmExample/: readme.md
HelmExample/Helm01Minikube/: readme.md
HelmExample/Helm02Minikube/: k8s-service.yml  readme.md
HelmExample/Helm03Minikube-EnvVar/: app.py  readme.md
HelmExample/Helm04Minikube-EnvVar/: Kubernetes.yaml  app.py  readme.md
HelmExample/Helm05Minikube-EnvVarHelm/: app.py  k8s-deployment.yml  k8s-namespace.yml  k8s-service.yml  readme.md
HelmExample/Helm07Minikube-EnvVarHelm/: app.py  (+1 more)
Kaggle/: chatGpt.doc
Learning/ProjectTypes/CC-Poetry/: README.md  main.py  pyproject.toml
ML/: MLOps.txt  PoetryADtest.txt
Markanoid/: anNOTES.txt
Marshmallow/: anNotes.txt
Medium/: FastAPI.txt  Generators.txt  PostgreSQL.txt  RDBMS.txt  TODO.txt  articles.txt  articles02.txt  articles03.txt  articles04.txt  email.txt  sqliteDB.txt
Medium/AI/FeatureEngineering/: Ex02.py  Ex03.py  Ex04.py  Ex05.py  Ex06.py  Ex07.py  Ex08.py  Ex09.py  Ex10.py  Ex11.py  Ex12.py  README.md  main.py  my_data.py  pyproject.toml
MyLatest/: anList.txt
NewOpenAI/: Atari.ods  Atari.xls
PackageVScode/: .env
PyBind/: README.md
PyBind/MyProject/Cpp/tests/: CMakeLists.txt  test_core.cpp
PyBind/PyBind11TestProject/Cpp/: CMakeLists.txt
PyBind/PyBind11TestProject/Cpp/bindings/: .bindings.cpp.swp  bindings.cpp
PyBind/PyBind11TestProject/Cpp/src/: hello.cpp  hello.h
PyBind/PyBind11TestProject/Cpp/tests/: test_hello.cpp
PyBind/Test02/: CMakeLists.txt
PyBind/_archive/Test02/: CMakeLists.txt  README.md  main.cpp
PyBind/new-01/20-CLionSetup-01/: CMakeLists.txt  README.md  main.py
PyBind/new-01/20-CLionSetup-01/cmake/: Dependencies.cmake
PyBind/new-01/20-CLionSetup-01/src/: CMakeLists.txt  CMakeLists_opt.txt  main.cpp
PyBind/new-01/20-CLionSetup-01/src/api/: my_api.h
PyBind/new-01/20-CLionSetup-01/src/bindings/: pybind_module.cpp
PyBind/new-01/20-CLionSetup-01/tests/: CMakeLists.txt  test_api.cpp
PyBind/new-01/20-CLionSetup-38/src/: CMakeLists.txt
PyBind/new-01/20-CLionSetup-38/src/api/: my_api.cpp
PyBind/new-01/20-CLionSetup-38/src/bindings/: pybind_module.cpp
PyBind/new-01/20-CLionSetup-38/tests/: CMakeLists.txt
PyBind/new-02/01-stevechange-03/cpp/tests/: CMakeLists.txt  test_api.cpp
PyBind/new-04/cpp/src/: CMakeLists.txt  main.cpp
PyBind/new-04/cpp/src/bindings/: pybind_module.cpp
PyBind/new-04/cpp/src/core/: mesh_processor.h
PyBind/new-04/cpp/src/math/: matrix.h  vector.cpp
PyBind/new-04/cpp/src/mesh/: mesh.h  mesh_algorithms.cpp
PyBind/org/03-inline-bindings/Medium/Pybind11Example/: .gitignore  CMakeLists.txt  README02.md  SUBMODULE_SETUP.md
PyBind/org/04-project-bindings/MyPyBindTest/MyPyBindTest1/tests/: CMakeLists.txt  test_core.cpp
PyBind/org/04-project-bindings/PyBind11TestProject/Cpp/src/: CMakeLists.txt
PyBind/org/MyProject/: CMakeLists.txt
PyBind/org/MyProject/Cpp/: CMakeLists.txt
PyBind/org/MyProject/Cpp/src/: core.cpp
PyBind/org/PyBind11TestProject/: CMakeLists.txt  README.md
PyBind/org/PyBind11TestProject/Cpp/src/: hello.cpp
PyBind/org/PyBind11TestProject/Cpp/tests/: CMakeLists.txt
PyBindCheatSheet/: README.md  TODO.txt
PyBindCheatSheet/07-Example/cpp/tests/: CMakeLists.txt  mock_logger.h  test_matrix.cpp  test_mesh.cpp  test_mesh_algorithms.cpp  test_mesh_processor.cpp  test_vector.cpp
PyGame/: Audio.txt  Dist-Build-EXE.txt  Tutorials.txt
PyTest/: TDD.txt  YouTube.txt  anLinks.txt  mocking.txt  pytest-asyncio.txt  tasks.txt
PyTorchCheatSheet/: README.md
PyTorchCheatSheet/01-Example/: README.md  pyproject.toml
PyTorchCheatSheet01/: TODO.txt  anManifest.txt  buildFromSourceIssue.txt  errors.txt  scripts03-use-local-wheels.toml
PyTorchCheatSheet01/04-Example/: pyproject.toml
PyTorchCheatSheetII/: README.md
Pydantic/: Generics.txt  anNotes.txt  axExamples.txt
RLFarmaFoundGym/: readme
RetroOpenAI/: important_POC.md
TestGenAI/: main.py  readme.md  requirements.txt  window.py
Tutorials/: anNOTES.txt
testing/: main.py  random_agent.py
testing/BlogCodeGen/archive/: CMakeLists.txt  layout_CLion.txt  layout_PyCharm.txt  out_CMakeLists.txt.txt  out_layout_CLion.txt.txt  out_layout_PyCharm.txt.txt
testingII/: main.py
(+2369 files in other folders)
