[project]
name = "hello-world-azureml"
description = "Simple Hello World Azure ML endpoint service"
authors = [
    { name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "azureml-contrib-services>=1.59.0",
    "azureml-inference-server-http>=1.4.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
]
readme = "README.md"
requires-python = "==3.12.3"
license = { text = "MIT" }
version = "0.1.0"

[dependency-groups]
dev = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
    "requests>=2.31.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "flask>=3.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app", "."]
omit = ["tests/*", ".venv/*", "build/*"]

[tool.uv]
prerelease = "if-necessary-or-explicit"