[project]
name = "cc-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "StevePro7",email = "steveprozune@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.12"
